# firmware-macroboard

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  boot.py  button.py  code.py  hardware.py  leds.py  mode.py  mybuttons.py  myhid.py  protocol.py  pyproject.toml  pytest.ini  update.py  utils.py  version.py
.github/workflows/: python-tests.yml  release.yml
base_software/: adafruit-circuitpython-promicro-nrf52840-minimal-en_US-9.1.4.uf2  adafruit-circuitpython-waveshare_rp2040_zero-en_US-9.1.4.uf2
docs/: updating-old.md
scripts/: make_release.sh  prepare_release.sh
src/mutenix_firmware/: boot.py  button.py  debug_on.py  device_info.py  hardware.py  leds.py  log.py  main.py  mode.py  mybuttons.py  myhid.py  protocol.py  update.py  utils.py  version.py
tests/: conftest.py  test_button.py  test_leds.py  test_protocol.py  test_update.py  test_utils.py
