[project]
name = "mutenix-firmware"
license = "MIT"
version = "0.4.1"
description = "Firmware for the mutenix hardware."
readme = "README.md"
authors = [
    { name = "Matthias Bilger", email = "matthias@bilger.info" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "circuitpython-mocks>=0.3.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "pytest-timeout>=2.3.1",
    "pre-commit>=4.0.1",
]

[tool.uv]
